--- a/api/pom.xml
+++ b/api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>lfhcforms</artifactId>
-		<version>${project.version}</version>
+		<version>0.1.0-alpha</version>
 	</parent>
 
 	<artifactId>lfhcforms-api</artifactId>
