ConceptsInitializer now able to import the LFHC CSV file. 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/activator/ConceptsInitializer.java 	new file:   api/src/main/resources/lfhcConcepts.csv API resources can be loaded through an interface that should eventually be Spring-injected, this will allow for more customization when unit testing. 	new file:   api/src/main/java/org/openmrs/module/lfhcforms/utils/DefaultResouceLoaderImpl.java 	new file:   api/src/main/java/org/openmrs/module/lfhcforms/utils/ResourceLoader.java The address hierarchy should be imported through an initializer. To be continued. 	new file:   api/src/main/resources/addressHierarchy.csv The unit tests can be used to debug faster but they don't really test anything yet. To be continued. 	new file:   api/src/test/java/org/openmrs/module/lfhcforms/activator/ConceptsInitializerTest.java Adapted registration forms, widgets and fragments using the CSV-imported mapped concept IDs. 	modified:   omod/src/main/resources/apps/lfhcRegistration_app.json 	modified:   omod/src/main/webapp/fragments/field/ethnicity.gsp 	modified:   omod/src/main/webapp/fragments/field/language.gsp Work in progress on HtmlFormsInitializer. 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/activator/HtmlFormsInitializer.java 	new file:   omod/src/main/webapp/resources/htmlforms/triage.html

--- a/omod/src/main/resources/apps/lfhcRegistration_app.json
+++ b/omod/src/main/resources/apps/lfhcRegistration_app.json
@@ -78,7 +78,7 @@
                      "fields":[
                         {
                            "type":"obs",
-                           "formFieldName":"obs.202001AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+                           "formFieldName":"obs.LFHC:912",
                            "label":"Ethnicity?",
                            "widget":{
                               "providerName":"lfhcforms",
@@ -87,7 +87,7 @@
                         },
                         {
                            "type":"obs",
-                           "formFieldName":"obs.202101AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+                           "formFieldName":"obs.LFHC:920",
                            "label":"Language spoken",
                            "widget":{
                               "providerName":"lfhcforms",
