--- a/omod/src/main/resources/apps/lfhcRegistration_app.json
+++ b/omod/src/main/resources/apps/lfhcRegistration_app.json
@@ -23,7 +23,7 @@
             "encounterRole":"a0b03050-c99b-11e0-9572-0800200c9a66"
          },
          "allowUnknownPatients":false,
-         "allowManualIdentifier":true,
+         "allowManualIdentifier":false,
          "allowRetrospectiveEntry":true,
          "sections": [
             {
