--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -76,6 +76,12 @@
 	</dependency>
 
 	<!-- End OpenMRS core -->
+	
+	<dependency>
+		<groupId>joda-time</groupId>
+		<artifactId>joda-time</artifactId>
+		<version>2.8.1</version>
+	</dependency>
 
 </dependencies>
 
