--- a/omod/src/main/resources/apps/lfhcRegistration_app.json
+++ b/omod/src/main/resources/apps/lfhcRegistration_app.json
@@ -10,8 +10,7 @@
             "extensionPointId":"org.openmrs.referenceapplication.homepageLink",
             "type":"link",
             "label":"${project.parent.artifactId}.app.registerPatient.label",
-            //"url":"registrationapp/registerPatient.page?appId=lfhcforms.registrationapp.registerPatient",
-            "url":"registrationapp/registerPatient.page?appId=${project.parent.artifactId}.registrationapp.registerPatient",
+            "url":"registrationapp/registerPatient.page?appId=lfhcforms.registrationapp.registerPatient",
             "icon":"icon-user",
             "order":1,
             "requiredPrivilege":"App: registrationapp.registerPatient"
@@ -19,9 +18,10 @@
       ],
       "config":{
          "registrationEncounter":{
-            "encounterType":"bfcf0344-f70b-455b-8f03-a270d810001e",
+            "encounterType":"3e3424bd-6e9d-4c9c-b3a4-f3fee751fe7c",
             "encounterRole":"a0b03050-c99b-11e0-9572-0800200c9a66"
          },
+         "afterCreatedUrl":"coreapps/clinicianfacing/patient.page?patientId={{patientId}}",
          "allowUnknownPatients":false,
          "allowManualIdentifier":false,
          "allowRetrospectiveEntry":true,
