Refined boundaries.json Renamed 'pews' into 'pewsScore'. Modified the controller so that it keeps doing something that 'works' with the new boundaries.json. Added the Jackson friendly inner class PewsScoreFragmentController.Boundaries for unmarshalling boundaries.json as a map of those. 	deleted:    omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/PewsFragmentController.java 	new file:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/PewsScoreFragmentController.java 	modified:   omod/src/main/resources/apps/fragmentIncludes_extension.json 	renamed:    omod/src/main/webapp/fragments/pews.gsp -> omod/src/main/webapp/fragments/pewsScore.gsp 	deleted:    omod/src/main/webapp/resources/pews/boundaries.json 	new file:   omod/src/main/webapp/resources/pewsScore/boundaries.json Added omod/src/main/webapp/resources/pewsScore as a test resource dir. 	modified:   omod/pom.xml Using the JUnit test class for trying/debugging. 	new file:   omod/src/test/java/org/openmrs/module/lfhcforms/fragment/controller/PewsScoreFragmentControllerTest.java

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -115,6 +115,9 @@
 			<directory>src/test/resources</directory>
 			<filtering>true</filtering>
 		</testResource>
+		<testResource>
+			<directory>src/main/webapp/resources/pewsScore/</directory>
+		</testResource>
 	</testResources>
 
 	<pluginManagement>
