--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -80,9 +80,15 @@
 	<dependency>
 		<groupId>joda-time</groupId>
 		<artifactId>joda-time</artifactId>
-		<version>2.8.1</version>
+		<version>RELEASE</version>
 	</dependency>
-
+	<dependency>
+		<groupId>org.ocpsoft.prettytime</groupId>
+		<artifactId>prettytime</artifactId>
+		<version>RELEASE</version>
+		<scope>provided</scope>
+	</dependency>
+	
 </dependencies>
 
 <build>
