Added the expiry time feature. 	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/PewsScoreFragmentController.java 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/activator/AdminConfigInitializer.java 	modified:   api/src/main/resources/messages.properties Played around with the PrettyTime dependency, to no avail. 	modified:   omod/pom.xml Cleared a few 'mvn install' warnings linked to the chart search dependency. 	modified:   pom.xml

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -86,6 +86,7 @@
 		<groupId>org.ocpsoft.prettytime</groupId>
 		<artifactId>prettytime</artifactId>
 		<version>RELEASE</version>
+		<type>jar</type>
 		<scope>provided</scope>
 	</dependency>
 	
