--- a/api/pom.xml
+++ b/api/pom.xml
@@ -77,6 +77,10 @@
 			<artifactId>htmlformentryui-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>formentryapp-omod</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>net.sf.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>2.3</version>
