LFHCFORMS-101: Basic Data Report and Data Set creation through the Activator. Needed to depend on an earlier version of reporting-api. 	modified:   pom.xml ... and an explicit API dependency on it. 	modified:   api/pom.xml Added the ReportsInitializer in the Activator's list. 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/LFHCFormsActivator.java 	new file:   api/src/main/java/org/openmrs/module/lfhcforms/activator/ReportsInitializer.java Disabled the default Reporting UI app for now. 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/activator/AdminConfigInitializer.java BasicDataReport loads the SQL file to define a Data Set with it, and sets all aspects of the report definition. 	new file:   api/src/main/java/org/openmrs/module/lfhcforms/reporting/reports/BasicDataReport.java 	new file:   api/src/main/resources/report-basic-data.sql New messages specific to the report and the reporting environment. 	modified:   api/src/main/resources/messages.properties

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -59,6 +59,11 @@
 		<!-- End OpenMRS core -->
 
 		<dependency>
+			<groupId>org.openmrs.module</groupId>						
+			<artifactId>reporting-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>appframework-api</artifactId>
 			<scope>provided</scope>
