--- a/omod/src/main/resources/apps/lfhc_registration_app.json
+++ b/omod/src/main/resources/apps/lfhc_registration_app.json
@@ -38,12 +38,10 @@
                               "type": "personAddress",
                               "label": "registrationapp.patient.address.question",
                               "widget": {
-                                  //"providerName": "uicommons",
-                                  //"fragmentId": "field/personAddress"
                                   "providerName": "registrationapp",
                                   "fragmentId": "field/personAddressWithHierarchy",
                                   "config": {
-                                  	"manualFields": ["address1"]
+                                    "manualFields": ["address1"]
                                   }
                               }
                           }
@@ -65,6 +63,77 @@
                               "cssClasses": ["number"]
                           }
                       ]
+                  }
+               ]
+            },
+            {
+               "id":"nextOfKin",
+               "label": "Next of Kin",
+               "questions":[
+                  {
+                      "legend": "Father",
+                      "fields": [
+                          {
+                              "type": "personAttribute",
+                              "label": "Father's name",
+                              "formFieldName": "fatherName",
+                              "uuid": "51c5e4f4-7e13-11e5-8bcf-feff819cdc9f",
+                              "widget": {
+                                  "providerName": "uicommons",
+                                  "fragmentId": "field/text"
+                              }
+                          },
+                          {
+                              "type": "personAttribute",
+                              "label": "Father's occupation",
+                              "formFieldName": "fatherOccupation",
+                              "uuid": "51c5e88c-7e13-11e5-8bcf-feff819cdc9f",
+                              "widget": {
+                                  "providerName": "uicommons",
+                                  "fragmentId": "field/text",
+                                  "config": {
+                                    "size": 150
+                                  }
+                              }
+                          }
+                      ]
+                  },
+                  {
+                      "legend": "Mother",
+                      "fields": [
+                          {
+                              "type": "personAttribute",
+                              "label": "Mother's name",
+                              "formFieldName": "motherName",
+                              "uuid": "8d871d18-c2cc-11de-8d13-0010c6dffd0f",
+                              "widget": {
+                                  "providerName": "uicommons",
+                                  "fragmentId": "field/text"
+                              }
+                          }
+                      ]
+                  }
+               ]
+            },
+            {
+               "id":"insurance",
+               "label":"Insurance",
+               "questions":[
+                  {
+                     "legend":"Insurance",
+                     "fields":[
+                        {
+                            "type": "personAttribute",
+                            "label": "Insurance details",
+                            "formFieldName": "insuranceDetails",
+                            "uuid": "5c6ee7c2-7e1b-11e5-8bcf-feff819cdc9f",
+                            "widget": {
+                                "providerName": "uicommons",
+                                "fragmentId": "field/text",
+                                "size": 150
+                            }
+                        }
+                     ]
                   }
                ]
             },
