LFHCDESK-48: Allows for patients.csv bulk import Added the new Initializer 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/LFHCFormsActivator.java The actual work and also some trials through JUnit. 	new file:   api/src/main/java/org/openmrs/module/lfhcforms/activator/LFHCLegacyPatientsInitializer.java 	new file:   api/src/test/java/org/openmrs/module/lfhcforms/activator/LFHCLegacyPatientsInitializerTest.java Cleaned up a bit. 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/activator/LFHCConceptsInitializer.java Needed emr-api and registrationcore 	modified:   api/pom.xml 	modified:   omod/src/main/resources/config.xml 	modified:   pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -867,6 +867,15 @@
 			<artifactId>openmrs-test</artifactId>
 			<type>pom</type>
 		</dependency>
+		
+		<!-- The below dep. are needed for Activator's bulk import -->
+		<dependency>
+	        <groupId>org.openmrs.module</groupId>
+	        <artifactId>emrapi-api-1.11</artifactId>
+	        <version>1.11</version>
+			<scope>provided</scope>
+     	</dependency>
+  
 	</dependencies>
 
 	<build>
