--- a/api/pom.xml
+++ b/api/pom.xml
@@ -90,7 +90,10 @@
 			<artifactId>opencsv</artifactId>
 			<version>2.3</version>
 		</dependency>
-
+		<dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>registrationcore-omod</artifactId>
+        </dependency>
 
 	</dependencies>
 
