LFHCFORMS-116: Create fragment to set visit location 	modified:   api/src/main/resources/messages.properties
method "controller()" to retrieve the list of possible visit locations
method "change()" to save the visit with the new location provided by the view
	new file:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/visit/VisitLocationChangeFragmentController.java

View to display a dialog and dropdown to select visit location
	new file:   omod/src/main/webapp/fragments/visit/visitLocationChange.gsp

Javascript to configure the dialog actions
	new file:   omod/src/main/webapp/resources/scripts/visit/changeVisitLocation.js

Extension configurations to:
-add a link in the Visit Actions pane
-include the fragement (dialog) in the patient header
	modified:   omod/src/main/resources/apps/visitWithLocation_app.json

--- a/omod/src/main/resources/apps/visitWithLocation_app.json
+++ b/omod/src/main/resources/apps/visitWithLocation_app.json
@@ -10,19 +10,38 @@
         "id": "${project.parent.groupId}.${project.parent.artifactId}.patientDashboard.secondColumnFragments.visitWithLocationWidget",
         "extensionPointId": "patientDashboard.secondColumnFragments",
         "extensionParams": {
-            "provider": "${project.parent.artifactId}",
-            "fragment": "visit/visitWithLocationWidget"
+          "provider": "${project.parent.artifactId}",
+          "fragment": "visit/visitWithLocationWidget"
         }
       },
       {
-      	"appId": "lfhcforms.visits",
+        "appId": "lfhcforms.visits",
         "id": "${project.parent.groupId}.${project.parent.artifactId}.patientDashboard.visitWithLocation",
         "extensionPointId": "patientDashboard.includeFragments",
         "extensionParams": {
-            "provider": "${project.parent.artifactId}",
-            "fragment": "visit/visitWithLocation"
+          "provider": "${project.parent.artifactId}",
+          "fragment": "visit/visitWithLocation"
         }
-    }
+      },
+       {
+        "appId": "lfhcforms.visits",
+        "id": "${project.parent.groupId}.${project.parent.artifactId}.patientDashboard.visitLocationChange",
+        "extensionPointId": "patientDashboard.includeFragments",
+        "extensionParams": {
+          "provider": "${project.parent.artifactId}",
+          "fragment": "visit/visitLocationChange"
+        }
+      },
+      {
+        "appId": "lfhcforms.visits",
+        "id": "${project.parent.groupId}.${project.parent.artifactId}.visitActions.visitLocationChange",
+        "extensionPointId": "patientDashboard.visitActions",
+        "type": "script",
+        "label": "lfhcforms.app.visit.changelocation.label",
+        "script": "visit.showChangeVisitLocationDialog({{visit.id}})",
+        "icon": "icon-signin",
+        "order": 250
+      }
     ]
   }
 ]
