LFHCFORMS-117: Add setAdmissionBasedOnLocation() Add dependency to emrapi-api 	modified:   api/pom.xml
Add reference to Uuids
	modified:   api/src/main/java/org/openmrs/module/lfhcforms/LFHCFormsConstants.java

Create setAdmissionBasedOnLocation() method
	modified:   api/src/main/java/org/openmrs/module/lfhcforms/utils/Utils.java
Unable to create test (NoClassDefFoundError)
	renamed:    api/src/test/java/org/openmrs/module/lfhcforms/UtilsTest.java -> api/src/test/java/org/openmrs/module/lfhcforms/utils/UtilsTest.java

Call method upon creation of new visit and change of visit location
	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/visit/VisitLocationChangeFragmentController.java
	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/visit/VisitWithLocationFragmentController.java

	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/visit/VisitWithLocationWidgetFragmentController.java

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -74,6 +74,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
+			<artifactId>emrapi-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
 			<artifactId>htmlformentry-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
