LFHCFORMS-112: Rename fragment

--- a/omod/src/main/resources/apps/visitWithLocation_app.json
+++ b/omod/src/main/resources/apps/visitWithLocation_app.json
@@ -21,7 +21,7 @@
         "extensionPointId": "patientDashboard.includeFragments",
         "extensionParams": {
           "provider": "${project.parent.artifactId}",
-          "fragment": "visit/visitWithLocation"
+          "fragment": "visit/visitWithLocationStart"
         }
       },
       {
