--- a/omod/src/main/resources/apps/visitWithVisitType_app.json
+++ b/omod/src/main/resources/apps/visitWithVisitType_app.json
@@ -51,6 +51,16 @@
         "script": "visit.showChangeVisitTypeDialog({{visit.id}})",
         "icon": "icon-signin",
         "order": 250
+      },
+      {
+      	"appId": "lfhcforms.visitWithVisitType",
+        "id": "${project.parent.groupId}.${project.parent.artifactId}.activeVisitsHomepageLink",
+        "extensionPointId": "org.openmrs.referenceapplication.homepageLink",
+        "type": "link",
+        "label": "coreapps.activeVisits.app.label",
+        "url": "lfhcforms/activeVisits.page?app=coreapps.activeVisits",
+        "icon": "icon-calendar",
+        "requiredPrivilege": "App: coreapps.activeVisits"
       }
     ]
   }
