--- a/omod/src/main/resources/apps/visitWithVisitType_app.json
+++ b/omod/src/main/resources/apps/visitWithVisitType_app.json
@@ -58,7 +58,7 @@
         "extensionPointId": "org.openmrs.referenceapplication.homepageLink",
         "type": "link",
         "label": "coreapps.activeVisits.app.label",
-        "url": "lfhcforms/activeVisits.page?app=coreapps.activeVisits",
+        "url": "lfhcforms/visit/activeVisits.page?app=coreapps.activeVisits",
         "icon": "icon-calendar",
         "requiredPrivilege": "App: coreapps.activeVisits"
       }
