--- a/api/pom.xml
+++ b/api/pom.xml
@@ -59,7 +59,7 @@
 		<!-- End OpenMRS core -->
 
 		<dependency>
-			<groupId>org.openmrs.module</groupId>						
+			<groupId>org.openmrs.module</groupId>
 			<artifactId>reporting-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -94,6 +94,12 @@
 			<groupId>net.sf.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>2.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>calculation-api</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 
