--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>lfhcforms</artifactId>
-		<version>0.1.9-alpha</version>
+		<version>0.2.0</version>
 	</parent>
 
 	<artifactId>lfhcforms-omod</artifactId>
