--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>lfhcforms</artifactId>
-	<version>0.1.9-alpha</version>
+	<version>0.2.0</version>
 	<packaging>pom</packaging>
 	<name>LFHC Forms Module</name>
 	<url>https://github.com/mekomsolutions/openmrs-module-lfhcforms</url>
