--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -16,7 +16,7 @@
 	<dependencies>
 
 		<!-- Add other dependencies from parent's pom: <dependency> <groupId>org.other.library</groupId> 
-		<artifactId>library-name</artifactId> </dependency> -->
+			<artifactId>library-name</artifactId> </dependency> -->
 
 		<!-- Begin OpenMRS modules -->
 
@@ -45,7 +45,7 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>appframework-api</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>coreapps-api</artifactId>
@@ -107,12 +107,21 @@
 			<artifactId>joda-time</artifactId>
 			<version>RELEASE</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.ocpsoft.prettytime</groupId>
 			<artifactId>prettytime</artifactId>
 			<version>RELEASE</version>
 			<type>jar</type>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.skyscreamer</groupId>
+			<artifactId>jsonassert</artifactId>
+			<version>1.3.0</version>
+			<type>jar</type>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -161,7 +170,7 @@
 					</configuration>
 				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
-				only. It has no influence on the Maven build itself. -->
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
