--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 	<packaging>pom</packaging>
 	<name>LFHC Forms Module</name>
 	<url>https://github.com/mekomsolutions/openmrs-module-lfhcforms</url>
-	
+
 	<developers>
 		<developer>
 		</developer>
 	</developers>
-	
+
 	<organization>
 		<name>Mekom Solutions</name>
 		<url>http://www.mekomsolutions.com</url>
@@ -24,7 +24,7 @@
 		<module>api</module>
 		<module>omod</module>
 	</modules>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -66,7 +66,8 @@
 		<chartsearchVersion>1.2</chartsearchVersion>
 		<appointmentschedulingVersion>1.3</appointmentschedulingVersion>
 		<appointmentschedulinguiVersion>1.0.3-SNAPSHOT</appointmentschedulinguiVersion>
-		<namephoneticsVersion>1.4</namephoneticsVersion> <!-- The omod for namephonetics is not included in the distro, but we keep the version around since it's a semi-supported add-on -->
+		<namephoneticsVersion>1.4</namephoneticsVersion> <!-- The omod for namephonetics is not included in the distro, but we keep 
+			the version around since it's a semi-supported add-on -->
 	</properties>
 
 	<dependencyManagement>
@@ -773,7 +774,7 @@
 				<version>${allergyapiVersion}</version>
 				<scope>provided</scope>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>allergyui-api</artifactId>
@@ -793,7 +794,7 @@
 				<version>${allergyuiVersion}</version>
 				<scope>provided</scope>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>formentryapp-api</artifactId>
@@ -833,7 +834,7 @@
 				<scope>provided</scope>
 			</dependency>
 
-			<!-- Other dependencies -->		
+			<!-- Other dependencies -->
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>uicommons-scss</artifactId>
@@ -861,7 +862,7 @@
 			<artifactId>openmrs-api</artifactId>
 			<classifier>tests</classifier>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.openmrs.test</groupId>
 			<artifactId>openmrs-test</artifactId>
