LFHCFORMS-139: encounterDisplay_extension.json brought into LFHCFORMS.   new file:   omod/src/main/resources/apps/encounterDisplay_extension.json Extension "referenceapplication.defaultEncounterTemplate" disabled through the activator.   modified:   api/src/main/java/org/openmrs/module/lfhcforms/activator/AdminConfigInitializer.java Upping to dev version 0.2.4-SNAPSHOT.   modified:   pom.xml   modified:   api/pom.xml   modified:   omod/pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>lfhcforms</artifactId>
-	<version>0.2.3</version>
+	<version>0.2.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>LFHC Forms Module</name>
 	<url>https://github.com/mekomsolutions/openmrs-module-lfhcforms</url>
