LFHCDESK-159: Adding fragment and controller in the Patient Header
	modified:   omod/src/main/resources/apps/patientHeader_extension.json
	new file:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/PatientQuickNoteFragmentController.java
	new file:   omod/src/main/webapp/fragments/patientQuickNote.gsp
Add dependency on WebServices.REST
	modified:   omod/pom.xml

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>emrapi-omod</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>webservices.rest-omod</artifactId>
+		</dependency>
+
 
 		<!-- End OpenMRS modules -->
 
@@ -107,7 +112,7 @@
 			<artifactId>joda-time</artifactId>
 			<version>RELEASE</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.ocpsoft.prettytime</groupId>
 			<artifactId>prettytime</artifactId>
